--- a/node_version/package.json
+++ b/node_version/package.json
@@ -10,12 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "canvas": "^1.6.11",
-    "express": "^4.16.3",
-    "jimp": "^0.2.28",
-    "moment": "^2.22.2",
-    "npm": "^6.2.0",
-    "pixl-request": "^1.0.21",
-    "seedrandom": "^2.4.3"
+    "canvas": "^1.6.11"
   }
 }
