--- a/webpack_version/package.json
+++ b/webpack_version/package.json
@@ -13,15 +13,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
-    "bable-loader": "0.0.1-security",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "bable-loader": "0.0.1-security"
   },
   "dependencies": {
-    "fs-web": "^1.0.1",
-    "moment": "^2.22.2"
+    "fs-web": "^1.0.1"
   }
 }
